fix: JWT를 httpOnly 쿠키로 이동하고 OAuth 콜백에서 일회용 코드 교환 방식 적용
localStorage 대신 httpOnly/SameSite=Lax 쿠키로 토큰을 관리하고,
OAuth 콜백 시 URL에 JWT를 노출하지 않도록 일회용 코드 교환 엔드포인트를 추가한다.

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -36,6 +36,9 @@ app:
     expiration: 604800000  # 7 days in ms
   upload:
     dir: ./uploads
+  cookie:
+    secure: false   # 운영 환경에서 true
+    domain: ""      # 운영 환경에서 도메인 설정
   client-url: http://localhost:3000
 
   # Naver OAuth
